# AlphaIntelligence

./: .env.example  .gitignore  BUSINESS_READINESS_PLAN.md  CODEBASE_DOCUMENTATION.md  FEATURE_BACKLOG.md  FMP_STABLE_API.md  README.md  SIMPLE_TRADE_TRACKER.md  SYSTEM_OVERVIEW.md  ai_test_results.txt  automated_position_report.py  check_positions.py  check_throttling.sh  comprehensive_system_test.py  config.yaml  daily_scanner.sh  dashboard.py  demo.py  diag_output.txt  evaluate_portfolio.py  example_entry_dates.json  init_db.py  manage_positions.py  newsletter_test_results.txt  portfolio.json  pyproject.toml  quality_check_demo.py  requirements.txt  run_ai_report.py  run_backtest.py  run_daily_scan.bat  run_full_market_scan.py  run_optimized_scan.py  run_quant_engine.py  run_quarterly_compounder_scan.py  run_screen.sh  run_test.sh  screening_demo.py  seed_db.py  stock_screener.db  (+16 more)
.github/workflows/: ci_unit_tests.yml  daily_portfolio_operations.yml  daily_scan_with_email.yml  daily_screening_git_storage.yml  fast_test_email.yml  quarterly_compounder_scan.yml  run_tests.yml
data/fundamentals_cache/: AAL_fundamentals.json  AAME_fundamentals.json  AAMI_fundamentals.json  AAOI_fundamentals.json  AAON_fundamentals.json  AAPL_fundamentals.json  AAP_fundamentals.json  AARD_fundamentals.json  AA_fundamentals.json  ABAT_fundamentals.json  (+3706 more)
docs/: product_roadmap.md
src/: cli.py
tests/: __init__.py  test_ai_agent.py  test_backtest.py  test_cli.py  test_contracts.py  test_fetcher.py  test_newsletter_generator.py  test_provider_metrics.py  test_quality.py  test_screener.py
(+50 files in other folders)
