[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaintelligence"
version = "0.1.0"
description = "AlphaIntelligence unified CLI"
requires-python = ">=3.10"

[project.scripts]
alphaintel = "src.cli:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*"]
